--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <!-- 7. (备用) 标准浏览器页签图标 -->
   <link rel="icon" type="image/png" href="https://i.postimg.cc/pLBR6xzD/IMG-7239.png" />
 
-  <title>EPhone（兔k机二改 砂砂版）</title>
+  <title>EPhone（沙沙二改）</title>
 
   <link rel="stylesheet" href="style.css" />
   <!-- 虚拟时钟（必须最先加载） -->
