--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <link rel="stylesheet" href="style.css" />
   <!-- 虚拟时钟（必须最先加载） -->
-  <script src="virtual-clock.js"></script>
+  <script src="virtual-clock.js" defer></script>
 
   <script src="https://unpkg.com/dexie/dist/dexie.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
